--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.0",
     "react": "16.13.1",
-    "react-native": "0.63.2"
+    "react-native": "0.63.2",
+    "react-native-status-bar-height": "^2.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
