--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@react-native-community/async-storage": "^1.12.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-skeleton-placeholder": "^2.0.7",
     "react-native-status-bar-height": "^2.5.0"
   },
   "devDependencies": {
