--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-skeleton-placeholder": "^2.0.7",
     "react-native-status-bar-height": "^2.5.0"
   },
