--- a/ios/headshotBoilerPlate/Info.plist
+++ b/ios/headshotBoilerPlate/Info.plist
@@ -38,7 +38,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -58,7 +58,7 @@
 		<string>Poppins-Light.otf</string>
 		<string>Poppins-Regular.otf</string>
 		<string>Poppins-SemiBold.otf</string>
-		<string>Poppins-BlackItalic.otf</string>
+		<string>Ionicons.ttf</string>
 	</array>
 </dict>
 </plist>
