--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "a": "npx react-native run-android",
-    "i": "react-native run-ios --simulator=\"iPhone 8\"",
+    "i": "npx react-native run-ios --simulator=\"iPhone 8\"",
     "adb": "adb devices",
     "pods": "cd ios && pod install && cd ..",
     "npx-pods": "cd ios && npx pod-install && cd ..",
@@ -25,7 +25,8 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-skeleton-placeholder": "^2.0.7",
-    "react-native-status-bar-height": "^2.5.0"
+    "react-native-status-bar-height": "^2.5.0",
+    "react-native-vector-icons": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
