--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-skeleton-placeholder": "^2.0.7",
     "react-native-status-bar-height": "^2.5.0",
